# golden-emu-8

./: .gitignore  CMakeLists.txt  GoldenEmu.sln  README.md
GoldenEmu/: GoldenEmu.vcxproj  GoldenEmu.vcxproj.filters  imgui.ini
GoldenEmu/src/: application.cpp  application.h  chip8.cpp  chip8.h  input.cpp  input.h  main.cpp  settings.cpp  settings.h  ui.cpp  ui.h  util.cpp  util.h
GoldenEmu/x64/Debug/: GoldenEmu.exe.recipe  GoldenEmu.ilk  chip8.obj.enc  vc143.idb
GoldenEmu/x64/Debug/GoldenEmu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GoldenEmu.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
enc_temp_folder/25f5a975f956c7a7303664aaf5f5be8d/: chip8.cpp
